ucurry/testall.log
/usr/bin/lli

###### Testing test-alldefs
dune exec ucurry tests/scanparse/test-alldefs.uc > test-alldefs.ll
llc -relocation-model=pic test-alldefs.ll > test-alldefs.s
llc: error: llc: test-alldefs.ll:1:1: error: expected top-level entity
usage: ./ucurry [-a|-s|-l|-c] [file.uc]
^
###### FAILED

###### Testing test-def_datatype
dune exec ucurry tests/scanparse/test-def_datatype.uc > test-def_datatype.ll
llc -relocation-model=pic test-def_datatype.ll > test-def_datatype.s
llc: error: llc: test-def_datatype.ll:1:1: error: expected top-level entity
usage: ./ucurry [-a|-s|-l|-c] [file.uc]
^
###### FAILED

###### Testing test-def_fun
dune exec ucurry tests/scanparse/test-def_fun.uc > test-def_fun.ll
llc -relocation-model=pic test-def_fun.ll > test-def_fun.s
llc: error: llc: test-def_fun.ll:1:1: error: expected top-level entity
usage: ./ucurry [-a|-s|-l|-c] [file.uc]
^
###### FAILED

###### Testing test-def_var
dune exec ucurry tests/scanparse/test-def_var.uc > test-def_var.ll
llc -relocation-model=pic test-def_var.ll > test-def_var.s
llc: error: llc: test-def_var.ll:1:1: error: expected top-level entity
usage: ./ucurry [-a|-s|-l|-c] [file.uc]
^
###### FAILED

###### Testing test-expr_begin
dune exec ucurry tests/scanparse/test-expr_begin.uc > test-expr_begin.ll
llc -relocation-model=pic test-expr_begin.ll > test-expr_begin.s
llc: error: llc: test-expr_begin.ll:1:1: error: expected top-level entity
usage: ./ucurry [-a|-s|-l|-c] [file.uc]
^
###### FAILED

###### Testing test-expr_binop
dune exec ucurry tests/scanparse/test-expr_binop.uc > test-expr_binop.ll
llc -relocation-model=pic test-expr_binop.ll > test-expr_binop.s
llc: error: llc: test-expr_binop.ll:1:1: error: expected top-level entity
usage: ./ucurry [-a|-s|-l|-c] [file.uc]
^
###### FAILED

###### Testing test-expr_case
dune exec ucurry tests/scanparse/test-expr_case.uc > test-expr_case.ll
llc -relocation-model=pic test-expr_case.ll > test-expr_case.s
llc: error: llc: test-expr_case.ll:1:1: error: expected top-level entity
usage: ./ucurry [-a|-s|-l|-c] [file.uc]
^
###### FAILED

###### Testing test-expr_funapp
dune exec ucurry tests/scanparse/test-expr_funapp.uc > test-expr_funapp.ll
llc -relocation-model=pic test-expr_funapp.ll > test-expr_funapp.s
llc: error: llc: test-expr_funapp.ll:1:1: error: expected top-level entity
usage: ./ucurry [-a|-s|-l|-c] [file.uc]
^
###### FAILED

###### Testing test-expr_if
dune exec ucurry tests/scanparse/test-expr_if.uc > test-expr_if.ll
llc -relocation-model=pic test-expr_if.ll > test-expr_if.s
llc: error: llc: test-expr_if.ll:1:1: error: expected top-level entity
usage: ./ucurry [-a|-s|-l|-c] [file.uc]
^
###### FAILED

###### Testing test-expr_lambda
dune exec ucurry tests/scanparse/test-expr_lambda.uc > test-expr_lambda.ll
llc -relocation-model=pic test-expr_lambda.ll > test-expr_lambda.s
llc: error: llc: test-expr_lambda.ll:1:1: error: expected top-level entity
usage: ./ucurry [-a|-s|-l|-c] [file.uc]
^
###### FAILED

###### Testing test-expr_let
dune exec ucurry tests/scanparse/test-expr_let.uc > test-expr_let.ll
llc -relocation-model=pic test-expr_let.ll > test-expr_let.s
llc: error: llc: test-expr_let.ll:1:1: error: expected top-level entity
usage: ./ucurry [-a|-s|-l|-c] [file.uc]
^
###### FAILED

###### Testing test-expr_lit
dune exec ucurry tests/scanparse/test-expr_lit.uc > test-expr_lit.ll
llc -relocation-model=pic test-expr_lit.ll > test-expr_lit.s
llc: error: llc: test-expr_lit.ll:1:1: error: expected top-level entity
usage: ./ucurry [-a|-s|-l|-c] [file.uc]
^
###### FAILED

###### Testing test-expr_seq
dune exec ucurry tests/scanparse/test-expr_seq.uc > test-expr_seq.ll
llc -relocation-model=pic test-expr_seq.ll > test-expr_seq.s
llc: error: llc: test-expr_seq.ll:1:1: error: expected top-level entity
usage: ./ucurry [-a|-s|-l|-c] [file.uc]
^
###### FAILED

###### Testing test-expr_unop
dune exec ucurry tests/scanparse/test-expr_unop.uc > test-expr_unop.ll
llc -relocation-model=pic test-expr_unop.ll > test-expr_unop.s
llc: error: llc: test-expr_unop.ll:1:1: error: expected top-level entity
usage: ./ucurry [-a|-s|-l|-c] [file.uc]
^
###### FAILED

###### Testing test-expr_var
dune exec ucurry tests/scanparse/test-expr_var.uc > test-expr_var.ll
llc -relocation-model=pic test-expr_var.ll > test-expr_var.s
llc: error: llc: test-expr_var.ll:1:1: error: expected top-level entity
usage: ./ucurry [-a|-s|-l|-c] [file.uc]
^
###### FAILED

###### Testing test-expr_var_asn
dune exec ucurry tests/scanparse/test-expr_var_asn.uc > test-expr_var_asn.ll
llc -relocation-model=pic test-expr_var_asn.ll > test-expr_var_asn.s
llc: error: llc: test-expr_var_asn.ll:1:1: error: expected top-level entity
usage: ./ucurry [-a|-s|-l|-c] [file.uc]
^
###### FAILED

###### Testing fail-*
dune exec ucurry < tests/scanparse/fail-*.uc 2> fail-*.err >> testall.log
./testall.sh: 1: eval: cannot open tests/scanparse/fail-*.uc: No such file
diff -b fail-*.err tests/scanparse/fail-*.err > fail-*.diff
FAILED fail-*.err differs from tests/scanparse/fail-*.err
###### FAILED
